# hcds-winter-2020

./: README.md  pyproject.toml
assignments/A1_R1_WarmUp/A1_WarmUp/: A1_WarmUp.ipynb
assignments/A1_R1_WarmUp/arro/: blog.md
assignments/A1_R1_WarmUp/frra/: A1_WarmUp.ipynb  blog.md
assignments/A1_R1_WarmUp/lapa/: A1_WarmUp.ipynb
assignments/A1_R1_WarmUp/mane/: A1_WarmUp.ipynb
assignments/A1_WarmUp/: A1_WarmUp.ipynb
assignments/A1_WarmUp/albe/: A1_WarmUp.ipynb  blog.md
assignments/A1_WarmUp/alsc/: blog.md
assignments/A1_WarmUp/ansa/: A1_WarmUp.ipynb  blog.md
assignments/A1_WarmUp/arro/: A1_WarmUp.ipynb  blog.md
assignments/A1_WarmUp/chki/: A1_WarmUp-Copy1.ipynb  blog.md
assignments/A1_WarmUp/goto/: A1_WarmUp.ipynb  (+1 more)
assignments/A2_ReproducibilityWorkflow/: A2_ReproducibilityWorkflow.ipynb
assignments/A3_Bias/: A3_Wikipedia_ORES_Bias.ipynb
assignments/A4_Transparency/: A4_Transparency.ipynb  Untitled.ipynb
assignments/A5_Explanation/: Lime - basic usage, two class case.ipynb
assignments/A6_R7_DataVis/: COMPAS_ProPublica_WIT.odp  COMPAS_ProPublica_WIT.pptx
exercise/01_session/: PreQuest.ipynb  results-survey363142.xlsx
exercise/02_session/: summary-podcast.md
exercise/03_session/: summary-reading-book.md
exercise/04_session/: summary-ams-paper-questions.md
exercise/05_session/: summary-democast.md
exercise/06_session/: summary_ebook.md
exercise/07_session/: summary_podcast.md
exercise/08_session/: summary_guidelines_paper.md
exercise/10_session/: Summaries.md  questions.md
luka/: A2_ReproducibilityWorkflow.ipynb  README
(+209 files in other folders)
