[tool.poetry]
name = "hcds-winter-2020"
version = "0.1.0"
description = ""
authors = ["aschlegel <alexa.schlegel@fu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
